--- a/apriltag_ros/config/tags-3bundle.yaml
+++ b/apriltag_ros/config/tags-3bundle.yaml
@@ -19,7 +19,6 @@
 #   ]
 standalone_tags:
   [
-          {id: 0, size: 0.161, name: tag_0}
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -44,4 +43,13 @@ standalone_tags:
 #   ]
 tag_bundles:
   [
+    {
+      name: '3bundle',
+      layout: 
+        [
+                {id: 0, size: 0.058, x: 0.0000, y: -0.0000, z: 0.0000, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+{id: 1, size: 0.058, x: 0.116, y: -0.0000, z: 0.0000, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+{id: 2, size: 0.058, x: 0.00, y: -0.116, z: 0.0000, qw: 1.0, qx: 0.0, qy: 0.0, qz: 0.0},
+        ] 
+    }
   ]
