--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -19,7 +19,11 @@
 #   ]
 standalone_tags:
   [
-          {id: 0, size: 0.161, name: tag_0}
+          # {id: 0, size: 0.161, name: tag_0}
+          {id: 0, size: 0.039, name: tag_0},
+          {id: 1, size: 0.050, name: tag_1},
+          {id: 2, size: 0.050, name: tag_2},
+          {id: 3, size: 0.083, name: tag_3},
   ]
 # ## Tag bundle definitions
 # ### Remarks
