--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -20,10 +20,15 @@
 standalone_tags:
   [
           # {id: 0, size: 0.161, name: tag_0}
-          {id: 0, size: 0.039, name: tag_0},
+#          {id: 0, size: 0.039, name: tag_0},
+          {id: 0, size: 0.0385, name: tag_0},
           {id: 1, size: 0.050, name: tag_1},
           {id: 2, size: 0.050, name: tag_2},
           {id: 3, size: 0.083, name: tag_3},
+          {id: 4, size: 0.0333, name: ft_tag},
+          { id: 5, size: 0.050, name: tag_5 },
+          { id: 6, size: 0.050, name: tag_6 },
+          { id: 7, size: 0.050, name: tag_7 },
   ]
 # ## Tag bundle definitions
 # ### Remarks
