--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -29,6 +29,9 @@ standalone_tags:
           { id: 5, size: 0.050, name: tag_5 },
           { id: 6, size: 0.050, name: tag_6 },
           { id: 7, size: 0.050, name: tag_7 },
+          { id: 8, size: 0.02778, name: tag_8 },
+          { id: 9, size: 0.02778, name: tag_9 },
+
   ]
 # ## Tag bundle definitions
 # ### Remarks
