--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -31,6 +31,7 @@ standalone_tags:
           { id: 7, size: 0.050, name: tag_7 },
           { id: 8, size: 0.02778, name: tag_8 },
           { id: 9, size: 0.02778, name: tag_9 },
+          { id: 10, size: 0.02778, name: tag_10 },
 
   ]
 # ## Tag bundle definitions
