--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -32,6 +32,8 @@ standalone_tags:
           { id: 8, size: 0.02778, name: tag_8 },
           { id: 9, size: 0.02778, name: tag_9 },
           { id: 10, size: 0.02778, name: tag_10 },
+          { id: 11, size: 0.03333, name: tag_11 },
+          { id: 12, size: 0.03333, name: tag_12 },
 
   ]
 # ## Tag bundle definitions
