--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -34,6 +34,7 @@ standalone_tags:
           { id: 10, size: 0.02778, name: tag_10 },
           { id: 11, size: 0.03333, name: tag_11 },
           { id: 12, size: 0.03333, name: tag_12 },
+          { id: 13, size: 0.02888, name: tag_13 },
 
   ]
 # ## Tag bundle definitions
