--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -35,6 +35,8 @@ standalone_tags:
           { id: 11, size: 0.03333, name: tag_11 },
           { id: 12, size: 0.03333, name: tag_12 },
           { id: 13, size: 0.02888, name: tag_13 },
+          { id: 14, size: 0.02944, name: tag_14 },
+          { id: 15, size: 0.02888, name: tag_15 },
 
   ]
 # ## Tag bundle definitions
