--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -37,6 +37,7 @@ standalone_tags:
           { id: 13, size: 0.02888, name: tag_13 },
           { id: 14, size: 0.02944, name: tag_14 },
           { id: 15, size: 0.02888, name: tag_15 },
+          { id: 16, size: 0.02888, name: tag_16 },
 
   ]
 # ## Tag bundle definitions
