--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -23,7 +23,9 @@ standalone_tags:
 #          {id: 0, size: 0.039, name: tag_0},
           {id: 0, size: 0.0385, name: tag_0},
           {id: 1, size: 0.050, name: tag_1},
-          {id: 2, size: 0.050, name: tag_2},
+#          {id: 2, size: 0.050, name: tag_2},
+#          {id: 2, size: 0.0166667, name: tag_2},
+          {id: 2, size: 0.015, name: tag_2}, # Tag for calibrating the bubbles
           {id: 3, size: 0.083, name: tag_3},
           {id: 4, size: 0.0333, name: ft_tag},
           { id: 5, size: 0.050, name: tag_5 },
